# human-resource-machine-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: alphabetizer.txt  digit_exploder.txt  prime_factory.txt  sorting_floor.txt  string_reverse.txt
src/: compiler.rs  lexer.rs  main.rs  parser.rs  parser2.rs  preprocessor.rs
