[package]
name = "human-resouce-machine-transpiler"
version = "0.1.0"
authors = ["Eskil <eskilq@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
matches = "0.1.8"
downcast-rs = "1.1.1"
